# rayTracer

./: CMakeLists.txt  README.md  main.cpp  test.ppm
Canvas_lib/: CMakeLists.txt  Canvas.cpp  Canvas.h
Google_tests/: CMakeLists.txt  CanvasTest.cpp  IntersectionTest.cpp  LightTest.cpp  MaterialTest.cpp  MatrixTest.cpp  RayTest.cpp  ShapeTest.cpp  TupleTest.cpp
Intersection/: CMakeLists.txt  Intersection.cpp
Intersection_lib/: CMakeLists.txt  Intersection.cpp  Intersection.h
Light/: CMakeLists.txt  Light.cpp  Light.h
Material_lib/: CMakeLists.txt  Material.cpp  Material.h
Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  Transform.h
Matrix_lib/: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Transform.cpp  Transform.h
Ray/: CMakeLists.txt  Ray.cpp  Ray.h
Ray_lib/: Ray.cpp  Ray.h
Shape_lib/: CMakeLists.txt  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
Sphere_lib/: CMakeLists.txt  Sphere.cpp  Sphere.h
Tuples_lib/: CMakeLists.txt  Color.cpp  Color.h  Point.cpp  Point.h  Tuple.cpp  Tuple.h  Vector.cpp  Vector.h
